src/test/minijava/error/DoubleAttribute.mjava
class A {
    public int x;
    public bool x; // Erreur: deux attributs de même nom
}

public class DoubleAttribute {
    public static void main(String[] args) {
    }
}